fixing the most likely z-index problem

--- a/css/main.css
+++ b/css/main.css
@@ -212,7 +212,7 @@ a {
 }
 
 #kepler{
-    z-index:8;
+    z-index:10;
     position:relative;
     margin:2em -2em -3em 0;
     text-align:right;
@@ -250,12 +250,11 @@ a {
     width: 90%;
     height:2em;
     padding: 1em;
-    background: #DDD;
+    background: #FFF;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     border-radius: 10px;
     text-align:left;
-    z-index:10;
 }
 
 #bubble:after {
